# routes/routes.go
@@ -39,7 +39,7 @@ func RegisterRoutes(e *echo.Echo) {
 	api_v1.GET("/users/", handlers.GetUserHandler, middlewares.VerifyAuthMiddleware(middlewares.AuthMethodSession))
 	api_v1.DELETE("/users/", handlers.DeleteAccountHandler, middlewares.VerifyAuthMiddleware(middlewares.AuthMethodSession))
 	api_v1.PUT("/users/change-password", handlers.ChangePasswordHandler, middlewares.VerifyAuthMiddleware(middlewares.AuthMethodSession))
-	api_v1.GET("/subscriptions", handlers.GetSubscriptionHandler, middlewares.VerifyAuthMiddleware(middlewares.AuthMethodSession))
+	api_v1.GET("/subscriptions/", handlers.GetSubscriptionHandler, middlewares.VerifyAuthMiddleware(middlewares.AuthMethodSession))
 	api_v1.GET("/subscriptions/summary", handlers.GetSubscriptionSummaryHandler, middlewares.VerifyAuthMiddleware(middlewares.AuthMethodSession))
 	api_v1.GET("/plans", handlers.GetPlansHandler)
 	api_v1.POST("/messages/send", handlers.SendMessageHandler, middlewares.VerifyAuthMiddleware(middlewares.AuthMethodSession, middlewares.AuthMethodAPIKey))
